added more options
